--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="./app.js" defer></script>
-    <title>Document</title>
+    <title>💗Làm ny anh nhé💗</title>
 </head>
+
 <body>
     <div class="loading">
         <div class="boxHeartImg">
@@ -41,4 +43,5 @@
         </div>
     </div>
 </body>
+
 </html>
